# Opencv_test_code

./: CMakeLists.txt  README.md  canny.cpp  extract_roi.cpp  histogram_qualization.cpp  laplace.cpp  match_template.cpp  max_vehicle.cpp  sobel.cpp  video_capture.cpp
